--- a/UI/UI/Timesheet.html
+++ b/UI/UI/Timesheet.html
@@ -2,11 +2,41 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
+
     <link href="style/main.css" rel="stylesheet" />
     <link href="style/bootstrap.min.css" rel="stylesheet" />
+    <link href="style/dhtmlgoodies_calendar.css?random=20051112" rel="stylesheet" />
+    <link href="style/jquery-ui.css" rel="stylesheet" />
+    <link href="style/pqselect.dev.css" rel="stylesheet" />
+    <link href="style/jsDatePick_ltr.min.css" rel="stylesheet" />
+    <script type="text/javascript">
+        var conpath = "";
+    </script>
+    <script src="js/jsDatePick.min.1.3.js"></script>
+    <script src="js/dhtmlgoodies_calendar.js??random=20060118"></script>
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/pqgrid.min.js"></script>
 </head>
 <body>
     <div class="rightPanel">
+        <div id="timesheet_view_selector">
+            <ul>
+                <li>
+                    <form name="timesheetForm" method="post" action="/WeekTime.do">
+                        <input type="hidden" name="timeOptionForm" value="">
+                        <a class="previous" href="javascript:getPreviousWeek('2018-02-26','getPrevious')"><img src="/images/previous2.png" alt="prev" title="Previous Week" height="25" width="20" align="right"></a>
+                        <input type="button" name="date11Form" value="Current Week" onclick="javascript:getCurrentWeek('current')" class="btn-week">
+                        <a class="next" href="javascript:getNextWeek('2018-02-26','getNext')"><img src="/images/next2.png" alt="next" title="Next Week" height="25" width="20" align="left"></a>
+
+                        <input type="hidden" name="datenowForm" value="2018-03-21">
+                        <input type="button" value="" class="btnCalndr" title="Calendar" style="padding-top:0;" 
+                               onclick="displayCalendar('gettime',document.forms[0].datenowForm,'yyyy/mm/dd',this)">
+
+                    </form>
+                </li>
+            </ul>
+        </div>
         <form name="timesheetForm">
             <input type="hidden" name="selectedTextField">
             <input type="hidden" name="date1Form" value="2018-03-19">
@@ -22,15 +52,15 @@
                         <option value="52943" selected="selected">sid</option>
                     </select>
                     <!--<div class="pq-select-button pq-no-capture ui-widget ui-state-default ui-corner-all  pq-select pq-select-single" data-name="personCodeForm" tabindex="0"
-                         name="personCodeForm" style="width: 200px;">
-                        <span class="ui-icon ui-icon-triangle-1-s"></span>
-                        <div class="pq-select-text" style="max-width: 167.008px;">
-                            <span class="pq-select-item ui-corner-all ui-state-default" data-id="1">
-                                <span class="ui-icon ui-icon-close "></span>
-                                <span class="pq-select-item-text" style="max-width: 148.008px;">sid</span>
-                            </span>
-                        </div>
-                    </div>-->
+                     name="personCodeForm" style="width: 200px;">
+                    <span class="ui-icon ui-icon-triangle-1-s"></span>
+                    <div class="pq-select-text" style="max-width: 167.008px;">
+                        <span class="pq-select-item ui-corner-all ui-state-default" data-id="1">
+                            <span class="ui-icon ui-icon-close "></span>
+                            <span class="pq-select-item-text" style="max-width: 148.008px;">sid</span>
+                        </span>
+                    </div>
+                </div>-->
 
                     <select style="margin-left:10px;padding:5px;" onchange="redirectPage(this);">
                         <option value="Daily">Daily</option>
