timesheet week logic

--- a/UI/UI/mytimesheet.html
+++ b/UI/UI/mytimesheet.html
@@ -6,9 +6,10 @@
     <link href="style/bootstrap.min.css" rel="stylesheet" />
     <script src="js/jquery.min.js"></script>
     <script type="text/javascript">
+       
         var currentdt = new Date;
-        function fndates(selectedDate) {
-            var curr = selectedDate;
+        function setCurrentWeek(selectedDate) {
+            var curr = selectedDate == undefined ? new Date : selectedDate;
             var Monday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 1));
             var Tuesday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 2));
             var Wednesday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 3));
@@ -28,9 +29,16 @@
             $("#SatDate").html(MONTH_NAMES[Saturday.getMonth()] + " " + Saturday.getDate());
             $("#SunDate").html(MONTH_NAMES[Sunday.getMonth()] + " " + Sunday.getDate());
 
-            $("#selectedWeek").html(MONTH_NAMES[Monday.getMonth()] + "-" + Monday.getDate() + "-" + Monday.getFullYear()+" to "+
+            $("#selectedWeek").html(MONTH_NAMES[Monday.getMonth()] + "-" + Monday.getDate() + "-" + Monday.getFullYear() + " to " +
                 MONTH_NAMES[Sunday.getMonth()] + "-" + Sunday.getDate() + "-" + Sunday.getFullYear()
-                );
+            );
+        }
+
+        function UpdateWeek(val) {
+            var newDt = new Date(currentdt);
+            newDt.setDate(newDt.getDate() + val);
+            currentdt = new Date(newDt);
+            setCurrentWeek(newDt);
         }
     </script>
 
@@ -41,10 +49,10 @@
             <ul>
                 <li>
                     <form name="timesheetForm" method="post" action="/WeekTime.do">
-                        <a class="previous" href="javascript:fndates(currentdt-1)"><img src="/images/previous2.png" alt="prev" title="Previous Week" height="25" width="20"></a>
-                        <input type="button" name="date11Form" value="Current Week" onclick="javascript: fndates(currentdt);" class="btn-week">
-                        <a class="next" href="javascript:getNextWeek('2018-02-26','getNext')"><img src="/images/next2.png" alt="next" title="Next Week" height="25" width="20"></a>
-                        <img src="/images/calendar.png">
+                        <a class="previous" href="javascript: UpdateWeek(-7);"><img src="/images/previous2.png" alt="prev" title="Previous Week" height="25" width="20"></a>
+                        <input type="button" name="date11Form" value="Current Week" onclick="javascript: setCurrentWeek();" class="btn-week">
+                        <a class="next" href="javascript:UpdateWeek(7);"><img src="/images/next2.png" alt="next" title="Next Week" height="25" width="20"></a>
+                        <img src="/images/calendar.png" id="dtCalender">
                     </form>
                 </li>
             </ul>
@@ -80,6 +88,10 @@
         </table>
     </div>
 </body>
-<script type="text/javascript"></script>
+<script type="text/javascript">setCurrentWeek((new Date));
+    $(function () {
+        $("#dtCalender").datepicker();
+    });
+    </script>
 
 </html>
