--- a/UI/UI/mytimesheet.html
+++ b/UI/UI/mytimesheet.html
@@ -4,11 +4,33 @@
     <title></title>
     <link href="style/style.css" rel="stylesheet" />
     <link href="style/bootstrap.min.css" rel="stylesheet" />
-    <script src="js/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        $(function () {
+            $(function () {
+                $("#datepicker").datepicker({
+                    showOn: "button",
+                    buttonImage: "/images/calendar.png",
+                    buttonImageOnly: true,
+                    buttonText: "Select date"
+                });
+            });
+        });
+
+
+    </script>
+
     <script type="text/javascript">
-       
+        function onchange() {
+            currentdt = new Date($("#datepicker").val());
+            setWeek(currentdt);
+        }
+
         var currentdt = new Date;
-        function setCurrentWeek(selectedDate) {
+        function setWeek(selectedDate) {
             var curr = selectedDate == undefined ? new Date : selectedDate;
             var Monday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 1));
             var Tuesday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 2));
@@ -38,21 +60,27 @@
             var newDt = new Date(currentdt);
             newDt.setDate(newDt.getDate() + val);
             currentdt = new Date(newDt);
-            setCurrentWeek(newDt);
+            setWeek(newDt);
         }
     </script>
 
 </head>
 <body>
+    <br />
+    <br />
+    <br />
+    <br />
+
     <div class="mainPage">
         <div id="weekSelector">
             <ul>
                 <li>
                     <form name="timesheetForm" method="post" action="/WeekTime.do">
                         <a class="previous" href="javascript: UpdateWeek(-7);"><img src="/images/previous2.png" alt="prev" title="Previous Week" height="25" width="20"></a>
-                        <input type="button" name="date11Form" value="Current Week" onclick="javascript: setCurrentWeek();" class="btn-week">
+                        <input type="button" name="date11Form" value="Current Week" onclick="javascript: setWeek();" class="btn-week">
                         <a class="next" href="javascript:UpdateWeek(7);"><img src="/images/next2.png" alt="next" title="Next Week" height="25" width="20"></a>
-                        <img src="/images/calendar.png" id="dtCalender">
+                        <input type="hidden" id="datepicker" oninput= "this.onchange(this);"
+>
                     </form>
                 </li>
             </ul>
@@ -88,10 +116,9 @@
         </table>
     </div>
 </body>
-<script type="text/javascript">setCurrentWeek((new Date));
-    $(function () {
-        $("#dtCalender").datepicker();
-    });
-    </script>
+<script type="text/javascript">
+    setWeek((new Date));
+
+</script>
 
 </html>
