--- a/UI/UI/mytimesheet.html
+++ b/UI/UI/mytimesheet.html
@@ -2,12 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <link href="style/style.css" rel="stylesheet" />
+    <link href="style/mystyle.css" rel="stylesheet" />
     <link href="style/bootstrap.min.css" rel="stylesheet" />
+    <link href="style/jquery-ui.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="js/jquery-1.12.4.js"></script>
+    <script src="js/jquery-ui.js"></script>
+    <script src="jsCode/mytimesheet.js"></script>
     <script>
         $(function () {
             $(function () {
