--- a/UI/UI/time.html
+++ b/UI/UI/time.html
@@ -32,44 +32,7 @@
     </script>
 
     <script type="text/javascript">
-        function onchange() {
-            currentdt = new Date($("#datepicker").val());
-            setWeek(currentdt);
-        }
-
-        var currentdt = new Date;
-        function setWeek(selectedDate) {
-            var curr = selectedDate == undefined ? new Date : selectedDate;
-            var Monday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 1));
-            var Tuesday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 2));
-            var Wednesday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 3));
-            var Thursday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 4));
-            var Friday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 5));
-            var Saturday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 6));
-            var Sunday = new Date(curr.setDate(curr.getDate() - curr.getDay() + 7));
-
-            const MONTH_NAMES = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
-
-
-            $("#MonDate").html(MONTH_NAMES[Monday.getMonth()] + " " + Monday.getDate());
-            $("#TueDate").html(MONTH_NAMES[Tuesday.getMonth()] + " " + Tuesday.getDate());
-            $("#WedDate").html(MONTH_NAMES[Wednesday.getMonth()] + " " + Wednesday.getDate());
-            $("#ThuDate").html(MONTH_NAMES[Thursday.getMonth()] + " " + Thursday.getDate());
-            $("#FriDate").html(MONTH_NAMES[Friday.getMonth()] + " " + Friday.getDate());
-            $("#SatDate").html(MONTH_NAMES[Saturday.getMonth()] + " " + Saturday.getDate());
-            $("#SunDate").html(MONTH_NAMES[Sunday.getMonth()] + " " + Sunday.getDate());
-
-            $("#selectedWeek").html(MONTH_NAMES[Monday.getMonth()] + "-" + Monday.getDate() + "-" + Monday.getFullYear() + " to " +
-                MONTH_NAMES[Sunday.getMonth()] + "-" + Sunday.getDate() + "-" + Sunday.getFullYear()
-            );
-        }
-
-        function UpdateWeek(val) {
-            var newDt = new Date(currentdt);
-            newDt.setDate(newDt.getDate() + val);
-            currentdt = new Date(newDt);
-            setWeek(newDt);
-        }
+        
     </script>
 </head>
 <body>
@@ -109,6 +72,12 @@
         <div class="employeeInfo">
             Test Hours from <span class="from" id="selectedWeek"></span>
             <a href="javascript:void(0);">Show All Comments</a>
+        </div>
+        <div class="addRow clearfix">
+            <a href="javascript:void(0);" class="add">Add +</a>
+            <select name="projects" id="projects">
+            </select>
+            <select name="tasks" id="tasks"></select>
         </div>
         <div class="table-responsive">
             <table class="tblOffer" width="100%" cellpadding="0" cellspacing="0" border="0">
@@ -159,20 +128,7 @@
             </table>
         </div>
     </div>
-    <div class="addRow clearfix">
-        <a href="javascript:void(0);" class="add">Add +</a>
-        <select name="employeeName" id="employeeName">
-            <option value="">Test</option>
-            <option value="">Test</option>
-            <option value="">Test</option>
-            <option value="">Test</option>
-        </select>
-        <select name="timePeriod" id="timePeriod">
-            <option value="">Daily</option>
-            <option value="">Weekly</option>
-            <option value="">Monthly</option>
-        </select>
-    </div>
+    
     <div class="btnRow">
         <input type="submit" value="Save"><input type="submit" value="Submit">
     </div>
