--- a/UI/UI/time.html
+++ b/UI/UI/time.html
@@ -27,12 +27,9 @@
                 });
             });
         });
-
-
     </script>
 
     <script type="text/javascript">
-
     </script>
 </head>
 <body>
@@ -81,7 +78,8 @@
         <div class="table-responsive">
             <table id="tblweek" class="tblOffer" width="100%" cellpadding="0" cellspacing="0" border="0">
                 <tr>
-                    <th width="25%">Project/Job</th>
+                    <th width="5%"></th>
+                    <th width="20%">Project/Job</th>
                     <th width="22%">Task/Service</th>
                     <th width="6%"><span class="day">Mon</span><span class="date" id="MonDate"></span></th>
                     <th width="6%"><span class="day">Tue</span><span class="date" id="TueDate"></span></th>
@@ -96,7 +94,8 @@
             </table>
             <table id="tblweektotal" class="tblOffer" width="100%" cellpadding="0" cellspacing="0" border="0">
                 <tr>
-                    <td width="25%"></td>
+                    <td width="5%"></td>
+                    <td width="20%"></td>
                     <td width="22%"><strong>Total</strong></td>
                     <td width="6%"><span id="MonTotal">0.00</span></td>
                     <td width="6%"><span id="TueTotal">0.00</span></td>
@@ -108,11 +107,11 @@
                     <td width="6%"><strong><span id="TOT">0.00</span></strong></td>
                     <td width="5%"></td>
                 </tr>
-                <tr>
+                <!--<tr>
                     <td></td>
                     <td><strong>Time Entry Comments</strong></td>
                     <td colspan="9"><textarea name="" id="" cols="30" rows="10"></textarea></td>
-                </tr>
+                </tr>-->
             </table>
         </div>
     </div>
@@ -124,7 +123,6 @@
     <script type="text/javascript">
         setWeek((new Date));
         getProjects(1);
-
     </script>
 </body>
 </html>
