--- a/UI/UI/time.html
+++ b/UI/UI/time.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="btnRow">
-        <input type="submit" value="Save"><input type="submit" value="Submit">
+        <input type="button" class="save" value="Save"><input type="submit" value="Submit">
     </div>
 
     <script type="text/javascript">
