login + user API changes

--- a/UI/UI/time.html
+++ b/UI/UI/time.html
@@ -45,7 +45,7 @@
 
     <div class="contentWrapper">
         <div class="viewEdit clearfix">
-            <span>View/Edit Time For <strong>Sid</strong></span>
+            <span>View/Edit Time For <strong><label class="user_name"></label></strong></span>
             <!--<select name="employeeName" id="employeeName">
                 <option value="">Test</option>
                 <option value="">Test</option>
@@ -122,7 +122,7 @@
 
     <script type="text/javascript">
         setWeek((new Date));
-        getProjects(1);
+        getProjects();
     </script>
 </body>
 </html>
