--- a/UI/UI/login.html
+++ b/UI/UI/login.html
@@ -9,6 +9,7 @@
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
     <![endif]-->
+    <script src="js/jquery-1.12.4.js"></script>
     <script src="jsCode/login.js"></script>
 </head>
 <body>
@@ -18,15 +19,15 @@
             <form action="">
                 <div class="row">
                     <label for="">Username</label>
-                    <input type="text">
+                    <input type="text" id="name">
                 </div>
                 <div class="row">
                     <label for="">Password</label>
-                    <input type="password">
+                    <input type="password" id="pwd">
                 </div>
                 <div class="row">
                     <label for="">&nbsp;</label>
-                    <input type="button" value="Submit">
+                    <input type="button" value="Submit" id="login">
                 </div>
             </form>
         </div>
