--- a/UI/UI/time.html
+++ b/UI/UI/time.html
@@ -34,12 +34,13 @@
 </head>
 <body>
 
-    <div class="topband clearfix" style="display:none;">
+    <div id="divAdmin" class="topband clearfix" style="display:block;">
         <ul>
             <li><a class="active" href="javascript:void(0);">New</a></li>
             <li><a href="javascript:void(0);">Saved &nbsp;<span></span></a></li>
             <li><a href="javascript:void(0);">Pending &nbsp;<span></span></a></li>
             <li><a href="javascript:void(0);">Approved</a></li>
+            <li><a href="DataEntities.html">Data Entry</a></li>
         </ul>
     </div>
 
