--- a/UI/UI/DataEntities.html
+++ b/UI/UI/DataEntities.html
@@ -36,7 +36,16 @@
             <tr>
                 <th width="4%">Id</th>
                 <th width="48%">Name</th>
-                <th width="48%">User</th>
+            </tr>
+        </table>
+
+        <br />
+        User Projects:
+        <table id="tblUserProjects" class="tblOffer" width="50%" cellpadding="0" cellspacing="0" border="0">
+            <tr>
+                <th width="4%">Id</th>
+                <th width="48%">UserId</th>
+                <th width="48%">ProjectId</th>
             </tr>
         </table>
 
@@ -45,9 +54,18 @@
         <table id="tblTasks" class="tblOffer" width="50%" cellpadding="0" cellspacing="0" border="0">
             <tr>
                 <th width="4%">Id</th>
-                <th width="32%">Name</th>
-                <th width="32%">Project</th>
-                <th width="32%">Type</th>
+                <th width="48%">Name</th>
+                <th width="48%">Type</th>
+            </tr>
+        </table>
+
+        <br />
+        Project Tasks:
+        <table id="tblProjectTasks" class="tblOffer" width="50%" cellpadding="0" cellspacing="0" border="0">
+            <tr>
+                <th width="4%">Id</th>
+                <th width="48%">ProjectId</th>
+                <th width="48%">TaskId</th>
             </tr>
         </table>
 
