changes in Model and JS

--- a/UI/UI/time.html
+++ b/UI/UI/time.html
@@ -33,7 +33,7 @@
     </script>
 </head>
 <body>
-
+    <img src="images/laoder.gif" id="imgloader" />
     <div id="divAdmin" class="topband clearfix" style="display:block;">
         <ul>
             <li><a class="active" href="javascript:void(0);">New</a></li>
