--- a/UI/UI/DataEntities.html
+++ b/UI/UI/DataEntities.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <img src="images/laoder.gif" id="imgloader" />
     <div class="addRow clearfix" style="width:50%">
         <a href="#" class="add" id="GetData">GetData</a>
     </div>
@@ -44,8 +45,8 @@
         <table id="tblUserProjects" class="tblOffer" width="50%" cellpadding="0" cellspacing="0" border="0">
             <tr>
                 <th width="4%">Id</th>
-                <th width="48%">UserId</th>
                 <th width="48%">ProjectId</th>
+                <th width="48%">UserId</th>
             </tr>
         </table>
 
@@ -79,5 +80,8 @@
             </tr>
         </table>
     </div>
+    <script type="text/javascript">
+        $("#imgloader").hide();
+    </script>
 </body>
 </html>
