--- a/UI/UI/Approval.html
+++ b/UI/UI/Approval.html
@@ -15,6 +15,7 @@
     <script src="js/jquery-1.12.4.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="jsCode/navigation.js"></script>
+    <script src="jsCode/approval.js"></script>
     <script>
         $(function () {
             $(function () {
@@ -35,6 +36,7 @@
     </script>
 </head>
 <body>
+    <img src="images/laoder.gif" id="imgloader" />
     <div id="divAdmin" class="topband clearfix">
         <ul>
             <li><a href="#" id="lnkNew">New</a></li>
@@ -58,13 +60,15 @@
         </div>
     </div>
     <div class="table-responsive">
-        <table id="tblweek" class="tblOffer" width="100%" cellpadding="0" cellspacing="0" border="0">
+        <table id="tblresults" class="tblOffer" width="100%" cellpadding="0" cellspacing="0" border="0">
             <tr>
                 <th width="5%"><input type="checkbox" id="chkAll" /> Select All</th>
                 <th width="15%">Week Range</th>
                 <th width="22%">Total Hours</th>
                 <th width="22%">User Name</th>
             </tr>
+
+
         </table>
     </div>
     <div class="btnRowleft">
@@ -78,6 +82,8 @@
         $("#divAdmin").hide();
         if (user[2] == 1)
             $("#divAdmin").show();
+
+        getPendingApprovals();
     </script>
 </body>
 </html>
