--- a/UI/UI/time.html
+++ b/UI/UI/time.html
@@ -113,7 +113,7 @@
     </div>
 
     <div class="btnRow">
-        <input type="button" class="save" value="Save"><input type="submit" value="Submit">
+        <input type="button" class="save" value="Save"><input type="button" value="Submit" id="btnSubmit">
     </div>
 
     <script src="jsCode/mytimesheet.js"></script>
