completed Approval Page

--- a/UI/UI/DataEntities.html
+++ b/UI/UI/DataEntities.html
@@ -19,8 +19,7 @@
         <ul>
             <li><a href="#" id="lnkNew">New</a></li>
             <li><a href="#" id="lnkSaved">Saved &nbsp;<span></span></a></li>
-            <li><a href="#" id="lnkPending">Pending &nbsp;</a></li>
-            <li><a href="#" id="lnkApproved">Approved</a></li>
+            <li><a href="#" id="lnkPending">Pending Approvals &nbsp;</a></li>
             <li><a href="#" id="lnkDataEntry" class="active">Data Entry</a></li>
         </ul>
     </div>
