--- a/UI/UI/Approval.html
+++ b/UI/UI/Approval.html
@@ -41,8 +41,7 @@
         <ul>
             <li><a href="#" id="lnkNew">New</a></li>
             <li><a href="#" id="lnkSaved">Saved &nbsp;<span></span></a></li>
-            <li><a href="#" id="lnkPending" class="active">Pending &nbsp;</a></li>
-            <li><a href="#" id="lnkApproved">Approved</a></li>
+            <li><a href="#" id="lnkPending" class="active">Pending Approvals &nbsp;</a></li>
             <li><a href="#" id="lnkDataEntry">Data Entry</a></li>
         </ul>
     </div>
@@ -57,6 +56,7 @@
             From: <input type="text" id="txtFrom" />
             To: <input type="text" id="txtTo" />
             <input type="button" id="btnSearch" value="Search" class="btn">
+            <input type="button" id="btnReset" value="Reset" class="btn">
         </div>
     </div>
     <div class="table-responsive">
@@ -67,8 +67,6 @@
                 <th width="22%">Total Hours</th>
                 <th width="22%">User Name</th>
             </tr>
-
-
         </table>
     </div>
     <div class="btnRowleft">
@@ -83,7 +81,7 @@
         if (user[2] == 1)
             $("#divAdmin").show();
 
-        getPendingApprovals();
+        //getPendingApprovals();
     </script>
 </body>
 </html>
