--- a/UI/UI/Approval.html
+++ b/UI/UI/Approval.html
@@ -64,9 +64,10 @@
         <table id="tblresults" class="tblOffer" width="100%" cellpadding="0" cellspacing="0" border="0">
             <tr>
                 <th width="5%"><input type="checkbox" id="chkAll" /> Select All</th>
-                <th width="15%">Week Range</th>
+                <th width="14%">Week Range</th>
                 <th width="22%">Total Hours</th>
                 <th width="22%">User Name</th>
+                <th width="22%">Status</th>
             </tr>
         </table>
     </div>
