--- a/UI/UI/Approval.html
+++ b/UI/UI/Approval.html
@@ -47,7 +47,7 @@
     </div>
     <div class="contentWrapper">
         <div class="viewEdit clearfix">
-            <span><strong>Pending Time Entries  </strong></span>
+            <span><strong>Pending TimeSheets  </strong></span>
         </div>
         <hr />
     </div>
@@ -79,12 +79,7 @@
 
 
     <script type="text/javascript">
-        $("#divAdmin").hide();
-        if (user[2] == 1)
-            $("#divAdmin").show();
         $("#imgloader").hide();
-
-        //getPendingApprovals();
     </script>
 </body>
 </html>
